# Minions

./: Cargo.toml
config/: default.toml
doc/: config.md
plugins/emoji.minions/: run.py
src/: lib.rs
src/actions/: clipboard.rs  file_browser.rs  fontawesome.rs  linux_desktop_entry.rs  mod.rs  reload.rs  search_engine.rs  wolframalpha.rs  youdao.rs
src/actions/custom_script/: action.rs  item.rs  mod.rs  parser.rs  requirement.rs
src/actions/utils/: mod.rs  open.rs  subprocess.rs
src/frontend/: app.rs  mod.rs  ui.rs
src/mcore/: action.rs  config.rs  context.rs  fuzzymatch.rs  item.rs  lrudb.rs  matcher.rs  mod.rs
