[package]
name = "minions"
version = "0.5.3"
edition = "2018"
authors = ["BlahGeek <i@BlahGeek.com>"]

[lib]
name = "minions"
path = "src/lib.rs"
doc = false

[[bin]]
name = "minions"
path = "src/bin/minions.rs"

[dependencies]
toml = "0.5.7"
byteorder = "1"
clap = "2.33.3"
htmlescape = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["v4"] }
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
shlex = "0.1"
url = "1.5"
reqwest = "0.9.18"
rust-crypto = "0.2"
rust-ini = "0.11"
nix = "0.19.1"
libc = "0.2"
chrono = "0.4"
glib-sys = "0.10.1"
glib = "0.10.3"
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"
gdk-pixbuf-sys = "0.10.0"
gtk = { version = "0.9.2", features = ["v3_24_9"] }
gtk-sys = "0.10.0"
lru-cache = "0.1.1"
pinyin = "0.2"
rusqlite = "0.21"
lazy_static = "1.0"
error-chain = "0.12"
dirs = "3.0.1"
